--- a/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
@@ -28,11 +28,11 @@
                     <img src="{{url_for('static',filename = 'Web_models/lawyer_lookup.jpeg')}}" width="200" height="200">
                 </a>
             </div>
-            <div class="col-sm-2">
-                <a href="{{ url_for('google_api_test') }}">
-                    summon test!
-                </a>
-            </div>
+<!--            <div class="col-sm-2">-->
+<!--                <a href="{{ url_for('google_api_test') }}">-->
+<!--                    summon test!-->
+<!--                </a>-->
+<!--            </div>-->
         </div>
     </div>
 {% endblock content %}
